hphp/hack/test/typecheck/expression_trees/shapes/shape_creation_non_existing_field.php.exp
ERROR: File "shape_creation_non_existing_field.php", line 8, characters 8-35:
Invalid argument (Typing[4057])
  File "shape_creation_non_existing_field.php", line 7, characters 11-34:
  The field `z` is missing
  File "shape_creation_non_existing_field.php", line 8, characters 24-26:
  The field `z` is defined
