hphp/hack/test/typecheck/expression_trees/shapes/shape_creation_non_existing_field.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function g(): void {
  ExampleDsl`{
    $f = (shape('x' => ExampleInt) $shape) ==> 3;
    $f(shape('x' => 2, 'z' => 'hi'));
  }`;
}
